# minicnn

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  README.zh-TW.md  USAGE.md  minicnn_agent_instruction_v1_v4.txt  pyproject.toml
configs/: alexnet_like.yaml  autograd_enhanced.yaml  autograd_tiny.yaml  cifar10_cuda_native_gpu_stronger.yaml  cuda_legacy_strict.yaml  dual_backend_cnn.yaml  dual_backend_torch_custom.yaml  flex_broad.yaml  flex_cnn.yaml  flex_custom.yaml  flex_mlp.yaml  resnet_like.yaml  train_cuda.yaml  train_torch.yaml
cpp/: CMakeLists.txt  Makefile
cpp/cmake/: README.md
cpp/include/: cublas_check.h  cublas_context.h  cuda_check.h  dense_layer.h  network.h  tensor.h
cpp/src/: backward.cu  batchnorm.cu  conv_backward.cu  core.cu  cublas_context.cu  dense_layer.cu  gpu_monitor.cu  layer_norm.cu  leaky_relu.cu  loss_layer.cu  maxpool_backward_nchw.cu  maxpool_backward_use_idx.cu  maxpool_store.cu  memory.cu  network.cu  optimizer.cu  reorganize.cu  reorganize_backward.cu
docs/: 01_project_files.md  02_build_shared_library.md  03_c_api_reference.md  04_python_ctypes_mnist.md  05_cpp_linking.md  06_layout_and_debug.md  07_windows_build.md  08_autograd.md  09_feature_expansion.md  TEMP_HANDOFF.md  USAGE.md  agent_completion_report.md  architecture.md  backend_capabilities.md  benchmark_report_template.md  capability_expansion_slices.md  comment_review_status.md  comparison_completion_report.md  comparison_followup_todo.md  comparison_report.md  configuration_guide.md  convnext_capability_matrix.md  convnext_code_review_v2_closure_note.md  convnext_explicit_delivery_summary.md  convnext_explicit_smoke_index.md  convnext_support_blueprint.md  convnext_yaml_ir_decision.md  cuda_batchnorm2d_evaluation.md  cuda_native.md  cuda_native_amp_graduation_checklist.md  cuda_native_contract.md  cuda_native_expansion_plan.md  cuda_native_gpu_cifar10_runbook.md  cuda_native_gpu_enablement_plan.md  cuda_native_gpu_enablement_status.md  cuda_native_gpu_parity_matrix.md  cuda_native_large_file_inventory.md  cuda_native_phase5_rfc.md  cuda_native_productionization_plan.md  cuda_native_smoke_matrix.md  (+25 more)
examples/: README.md  cuda_native_amp_cifar10_beta_demo.py  cuda_native_gpu_convnext_bridge_training_cifar10_demo.py  cuda_native_gpu_forward_cifar10_demo.py  cuda_native_gpu_linear_training_cifar10_demo.py  cuda_native_gpu_two_conv_training_cifar10_demo.py  custom_block.py
features/: README.md  minicnn_staged_feature_expansion_agent_instruction.txt  minicnn_staged_feature_expansion_short_checklist.txt
notebooks/: 01_autograd_from_scratch.ipynb
scripts/: build_windows_native.ps1  publish_github.sh
templates/: README.md
tests/: README.md  test_autograd.py  test_autograd_parity.py  test_autograd_stack.py  test_bce_contract_and_capability.py  test_bce_label_rules_and_capability.py  test_cifar10_loader.py  test_cli_path_resolution.py  test_comment_fixes.py  test_convnext_block.py  test_convnext_components.py  test_convnext_explicit_cifar_integration.py  test_convnext_explicit_cli.py  test_convnext_explicit_integration.py  test_convnext_explicit_smoke.py  test_convnext_review_v2_regressions.py  test_convnext_tiny_model.py  (+80 more)
(+233 files in other folders)
